--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -281,6 +281,10 @@
           logo: default.webp
           url: https://cloudflare.dns.surf
           description: 依托cloudflare全球多地区DNS查询
+          - title: paint board
+          logo: default.webp
+          url: https://songlh.top/paint-board/
+          description: paint-board
     - term: 博客论坛
       links:
         - title: 阮一峰的网络日志
