--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -297,6 +297,6 @@
           description: 王垠的博客
         - title: 江宏
           url: https://1byte.io/
-          logo: https://1byte.io//apple-touch-icon.png
+          logo: https://1byte.io/apple-touch-icon.png
           description: 江宏的博客
         
