--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -76,7 +76,7 @@
           url: https://www.bdys03.com/
           description: 哔嘀影视
         - title: 独播库
-          logo: https://f.724365.xyz/?url=www.duboku.tv
+          logo: default.webp
           url: https://www.duboku.tv/
           description: 独播库
     - term: 游戏竞技
